--- a/config_openocd_stm32f0.cfg
+++ b/config_openocd_stm32f0.cfg
@@ -7,7 +7,7 @@
 source [find interface/stlink-v2.cfg]
 set WORKAREASIZE 0x2000
 source [find target/stm32f0x_stlink.cfg]
-reset_config srst_only srst_nogate connect_assert_srst
+# reset_config srst_only srst_nogate connect_assert_srst
 init
 
 proc stm_flash {IMGFILE} {
